resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
    app.kubernetes.io/name: nginx
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      app.kubernetes.io/name: nginx
  template:
    metadata:
      labels:
        app: nginx
        app.kubernetes.io/name: nginx
    spec:
      serviceAccountName: nginx
      containers:
        - name: nginx
          image: nginx:1.16.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /index.html
              port: http
          readinessProbe:
            httpGet:
              path: /index.html
              port: http
          volumeMounts:
           - name: nginx
             subPath: default.conf
             mountPath: /etc/nginx/conf.d/default.conf
           - name: nginx
             subPath: index.html
             mountPath: /usr/share/nginx/html/index.html
      volumes:
      - configMap:
          defaultMode: 420
          name: nginx
        name: nginx
