resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  labels:
    app: nginx
    app.kubernetes.io/name: nginx
spec:
  tls:
  - hosts:
      - test.s0.lakis.eu
    secretName: nginx-cert
  rules:
    - host: "test.s0.lakis.eu"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
